# swagger/paths/contacts/get.yaml
@@ -2,27 +2,48 @@ tags:
   - Contacts
 summary: Get list of contacts
 operationId: getContacts
-description: 'Get list of contacts'
+description: 'Get list of contacts with this endpoint'
 security:
   - bearerAuth: []
 parameters:
   - in: query
     name: page
-    required: true
     schema:
       type: integer
-      example: 1
+    example: 1
   - in: query
     name: perPage
     schema:
       type: integer
       example: 10
   - in: query
+    name: sortBy
+    schema:
+      type: string
+      example: 'name'
+    description: "All contacts' fields can be mentioned. Default value - _id"
+  - in: query
     name: sortOrder
     schema:
       type: string
       enum: ['asc', 'desc']
       example: 'asc'
+  - in: query
+    name: isFavourite
+    schema:
+      type: boolean
+      example: true
+  - in: query
+    name: email
+    schema:
+      type: string
+      example: example@mail.com
+  - in: query
+    name: contactType
+    schema:
+      type: string
+      enum: ['work', 'home', 'personal']
+      example: home
 responses:
   '200':
     description: Successfully found contacts!
@@ -40,14 +61,14 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found contacts!
+              example: Successfully found students!
             data:
               type: object
               required:
                 - data
                 - page
                 - perPage
-                - totalContacts
+                - totalItems
                 - totalPages
                 - hasNextPage
                 - hasPreviousPage
@@ -55,7 +76,7 @@ responses:
                 data:
                   type: array
                   items:
-                    $ref: '../../components/schemas/contact.yaml'
+                    $ref: ..\..\components\schemas\contactSchema.yaml
                 page:
                   type: number
                   example: 2
@@ -74,5 +95,18 @@ responses:
                 hasPreviousPage:
                   type: boolean
                   example: true
+  '404':
+    description: Contacts not found
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            status:
+              type: integer
+              example: 404
+            message:
+              type: string
+              example: Contacts not found
   '401':
     $ref: '../../components/responses/401.yaml'
